fix: 補齊漸層文字效果的 CSS 屬性

--- a/index.html
+++ b/index.html
@@ -291,7 +291,9 @@
 
         .winner-text.gradient-pop {
             background: var(--primary-gradient);
+            background-clip: text;
             -webkit-background-clip: text;
+            color: transparent;
             -webkit-text-fill-color: transparent;
             transform: scale(1.1);
         }
