--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
 
+    <div class="bg-gradient-orbs">
+        <div class="orb orb-1"></div>
+        <div class="orb orb-2"></div>
+        <div class="orb orb-3"></div>
+    </div>
     <canvas id="confetti-canvas"></canvas>
 
     <nav class="navbar">
@@ -171,7 +176,8 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=5"></script>
+    </script>
 </body>
 
 </html>
